[gd_scene load_steps=4 format=3 uid="uid://ce4322hiu7l6k"]

[ext_resource type="Script" path="res://addons/snippeter/menu/editor/editor.gd" id="1_qoo68"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ghkt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31i5d"]

[node name="Editor" type="PopupPanel"]
title = "Create a Snippet"
initial_position = 1
size = Vector2i(800, 500)
unresizable = false
borderless = false
min_size = Vector2i(600, 400)
script = ExtResource("1_qoo68")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 496.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ghkt")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_31i5d")
placeholder_text = "Snippet Name"
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="CodeEdit" type="CodeEdit" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
placeholder_text = "var my_var = \"example\""

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Save"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Close"

[node name="EmptyNameDialog" type="AcceptDialog" parent="."]
title = "Empty Name"
initial_position = 1
dialog_text = "Please enter a name"

[node name="ExistingNameDialog" type="AcceptDialog" parent="."]
title = "Invalid Snippet Name"
initial_position = 1
size = Vector2i(498, 100)
dialog_text = "That snippet name is already in use. Please use another name."

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
